# CMake-Demo-Project

./: CMakeLists.txt  README.md  build.sh
include/: add.hpp  log.hpp  sub.hpp  utils.hpp
src/: add.cpp  sub.cpp  utils.cpp
targets/: addtarget.cpp  multithreadadd.cpp  subtarget.cpp
tests/: test_add.cpp  test_sub.cpp
